--- a/src/Components/NavBar/Navbar.css
+++ b/src/Components/NavBar/Navbar.css
@@ -42,6 +42,10 @@ nav .list {
   align-items: center;
 }
 
+nav .list a:nth-child(1){
+  margin-left: 0;
+}
+
 nav .list a {
   margin-left: 30px;
   text-decoration: none;
